--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,10 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
+  <modules>
+      <module>could-provider-payment8002</module>
+  </modules>
+
   <!--统一管理jar包版本-->
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -17,8 +21,8 @@
     <junit.version>4.12</junit.version>
     <log4j.version>1.2.17</log4j.version>
     <lombok.version>1.16.18</lombok.version>
-    <mysql.version>5.1.46</mysql.version>
-    <druid.version>1.0.31</druid.version>
+    <mysql.version>5.1.47</mysql.version>
+    <druid.version>1.1.21</druid.version>
     <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
   </properties>
   <!-- 子模块继承之后，提供作用：锁定版本+子modlue不用写groupId和version  -->
@@ -59,6 +63,11 @@
         <version>${druid.version}</version>
       </dependency>
       <dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>druid-spring-boot-starter</artifactId>
+        <version>1.1.10</version>
+      </dependency>
+      <dependency>
         <groupId>org.mybatis.spring.boot</groupId>
         <artifactId>mybatis-spring-boot-starter</artifactId>
         <version>${mybatis.spring.boot.version}</version>
@@ -89,6 +98,14 @@
         <configuration>
           <fork>true</fork>
           <addResources>true</addResources>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
     </plugins>
